Fix alignment in hero and mobile settings for myScene component

--- a/style.css
+++ b/style.css
@@ -588,18 +588,19 @@ section {
 .hero__inner {
   width: 100%;
   height: 100dvh;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 .hero__copy {
   max-width: 85vw;
   font-weight: 100;
   display: flex;
-  transform: translateY(85%);
+  justify-content: space-between;
+  margin: auto;
 }
 .hero__lower {
   display: flex;
-  justify-content: flex-end;
+  align-self: flex-end;
 }
 .hero__lower span {
   padding-bottom: 4rem;
